site refresh: gobal fonts and translation

--- a/styles/button.module.css
+++ b/styles/button.module.css
@@ -5,6 +5,7 @@
   background-color: #edff7c;
   color: rgba(0, 0, 0, 0.784);
   border-radius: 15px;
+  font-family: "Inclusive Sans", sans-serif;
   font-size: medium;
   height: 60px;
   width: 120px;
