--- a/styles/cv.module.css
+++ b/styles/cv.module.css
@@ -10,7 +10,7 @@
   z-index: 1;
 }
 .toggButt {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Russo", sans-serif;
   justify-content: center;
   position: fixed;
   text-align: center;
