--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Inclusive+Sans:ital,wght@0,300..700;1,300..700&display=swap");
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Inclusive Sans", sans-serif;
 }
