--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -38,6 +38,8 @@
   width: 300px;
   height: 88px;
   border: none;
+  font-family: "Inclusive Sans", sans-serif;
+
   color: rgb(127, 127, 127);
 }
 .button {
@@ -49,6 +51,8 @@
   margin-top: 25px;
   width: 80px;
   color: rgb(152, 152, 152);
+  font-family: "Inclusive Sans", sans-serif;
+
   background-color: #edff7c;
 }
 .ready {
