--- a/styles/landingItems.module.css
+++ b/styles/landingItems.module.css
@@ -16,16 +16,27 @@
   z-index: -1;
 }
 .navlogo {
-  padding: 30px;
   height: auto;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
 }
 .heading {
   margin-left: 20px;
-  margin-top: -40px;
-  font-size: 14px;
+  font-size: 20px;
+  font-weight: 100;
+  padding-top: 10px;
+  padding-bottom: 60px;
+  padding-left: 10px;
+  color: white;
+}
+.mainheading {
+  color: white;
+
+  padding-top: 60px;
+  margin-left: 20px;
+  font-size: 40px;
   position: relative;
-  font-weight: 200;
+  font-weight: 500;
+  padding-left: 10px;
 }
 
 @media (max-width: 490px) and (max-height: 1000px) {
