--- a/styles/infoservices.module.css
+++ b/styles/infoservices.module.css
@@ -35,7 +35,9 @@
   align-items: center;
   text-align: center;
 }
-
+.items {
+  line-height: 0.5;
+}
 @media (max-width: 490px) {
   .carousel {
     max-width: 100vw;
