card black/ fix rsponsive sixe

--- a/styles/infoservices.module.css
+++ b/styles/infoservices.module.css
@@ -55,4 +55,11 @@
     margin-top: 20px;
     font-size: xx-small;
   }
+  .card {
+    width: 85%;
+    border-radius: 15px;
+    height: auto;
+    margin-top: 20px;
+    font-size: xx-small;
+  }
 }
