--- a/styles/infoservices.module.css
+++ b/styles/infoservices.module.css
@@ -55,7 +55,7 @@
     margin-top: 20px;
     font-size: xx-small;
   }
-  .card {
+  .cardBlack {
     width: 85%;
     border-radius: 15px;
     height: auto;
