--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -74,7 +74,7 @@
 @media (max-width: 768px) {
   .container {
     width: 100%;
-    margin-top: 40%;
+    /* margin-top: 40%; */
     border-radius: 0;
     align-items: center;
     background-color: rgba(255, 255, 255, 0);
