home margin fix

--- a/styles/video.module.css
+++ b/styles/video.module.css
@@ -1,6 +1,5 @@
 .container {
-  /* padding: 10px;
-  padding-top: 10px; */
+  padding-top: 25%;
   align-items: center;
   flex-direction: column;
   display: flex;
