--- a/styles/video.module.css
+++ b/styles/video.module.css
@@ -1,10 +1,10 @@
 .container {
-  padding-top: 25%;
+  padding-top: 35%;
   align-items: center;
   flex-direction: column;
   display: flex;
   color: white;
-  background-color: rgba(199, 199, 199, 0.23);
+  background-color: transparent;
   margin: 20px;
   width: 60vw;
   height: auto;
