--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -24,7 +24,7 @@
 .servicecard {
   margin-left: 4%;
   padding: 25px;
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0.3);
   border-radius: 20px;
   height: auto;
   min-width: fit-content;
