--- a/styles/infoservices.module.css
+++ b/styles/infoservices.module.css
@@ -4,8 +4,8 @@
   background-color: rgba(255, 255, 255, 0.867);
   color: rgb(58, 58, 58);
   border-radius: 15px;
-  height: auto;
-  width: 50%;
+  height: 80vh;
+  width: 30%;
   flex-direction: column;
   align-items: center;
   transition: transform 0.3s ease;
@@ -18,8 +18,8 @@
   color: rgb(255, 255, 255);
   font-weight: bolder;
   border-radius: 15px;
-  height: auto;
-  width: 50%;
+  height: 100vh;
+  width: 30%;
   flex-direction: column;
   align-items: center;
   transition: transform 0.3s ease;
@@ -29,8 +29,8 @@
 .carousel {
   display: flex;
   overflow-x: scroll;
-  min-height: 80%;
   width: 100%;
+  min-height: 80%;
   margin: auto;
   align-items: center;
   text-align: center;
