--- a/styles/infoservices.module.css
+++ b/styles/infoservices.module.css
@@ -4,7 +4,7 @@
   background-color: rgba(255, 255, 255, 0.867);
   color: rgb(58, 58, 58);
   border-radius: 15px;
-  height: 80vh;
+  height: max-content;
   width: 30%;
   flex-direction: column;
   align-items: center;
@@ -18,7 +18,7 @@
   color: rgb(255, 255, 255);
   font-weight: bolder;
   border-radius: 15px;
-  height: 100vh;
+  height: max-content;
   width: 30%;
   flex-direction: column;
   align-items: center;
