--- a/styles/infoPara.module.css
+++ b/styles/infoPara.module.css
@@ -25,7 +25,7 @@
 @media (max-width: 490px) {
   .container {
     width: 100vw;
-    margin-top: 20px;
+    margin-top: 35%;
     border-radius: 0%;
     padding: 10px;
     font-size: 8pt;
